# Modern-CPP-Vision-Core

./: .gitignore  CMakeLists.txt  CoreVisionUtils.sln  CoreVisionUtils.sln.DotSettings  README.md
ImageProcessing/: ImageBuffer.cpp  ImageBuffer.h  ImageCodec.cpp  ImageCodec.h  ImageCodecSample.cpp  ImageProcessing.vcxproj  SafeImageSize.h
Interop/: OpenCVInterop.cpp  OpenCVInterop.h
MoveOnlyBuffer/: ImageBuffer.cpp  ImageBuffer.h  MoveOnlyBuffer.cpp  MoveOnlyBuffer.vcxproj  MoveOnlyBuffer.vcxproj.filters
